--- a/01 IoC 컨테이너/02 의존관계 주입.md
+++ b/01 IoC 컨테이너/02 의존관계 주입.md
@@ -7,6 +7,20 @@
 * 필드 주입      
 * 일반 메서드 주입     
 
+# 🕛 의존관계 주입 개요 - 스프링 컨테이너의 라이프 사이클   
+
+스프링 컨테이너는 2단계의 라이프 사이클을 가진다.   
+  
+1. 스프링 빈을 등록  
+2. 연관 관계를 자동으로 주입한다.  
+  
+앞서 여러 의존 관계 주입이 있다하였다.    
+이들의 특징을 보면, **`생성자 주입`을 제외한 방법들은 빈이 생성된 후에 의존 관계 주입을 맺는다.**      
+반대로 **`생성자 주입`은 의존 관계 주입이 되고 난 후에야 비로소 빈으로 등록될 수 있다.**        
+    
+이 점에서 `생성자 주입`은 객체가 내부 상태를 모두 안전하게 가지고 있음을 반증하기도 한다.          
+물론 `상태 패턴`과 같은 디자인 패턴을 사용할 때는 `Setter 주입`이 유리할 수 도 있다.           
+
 # 📗 생성자 주입  
 > 이름 그대로 `생성자`를 통해서 의존 관계를 주입 받는 방법이다.   
      
@@ -62,31 +76,6 @@ public class OrderServiceImpl implements OrderService {
 }
 ```
 
-스프링 컨테이너는 2가지 라이프 사이클을 가지고 있다.   
-  
-1. 스프링 빈을 등록  
-2. 연관 관계를 자동으로 주입한다.  
-  
-Setter 메서드 또한, `@Autowired`를 통해, 연관 관계 자동 주입을 받는다.    
-생성자와 달리, 빈이 등록된 후에 의존 관계를 주입하는 방식이다.      
-그리고 어떤 Setter 주입이 먼저 실행될지 순서는 보장되지 않는다.      
-
-참고로, 선택적으로 의존 관계를 주입 받을 수 있다는 말은 아래와 같다.     
-```java
-    @Autowired(required = false)
-    public void setMemberRepository(MemberRepository memberRepository) {
-        this.memberRepository = memberRepository;
-    }
-
-    @Autowired
-    public void setDiscountPolicy(DiscountPolicy discountPolicy) {
-        this.discountPolicy = discountPolicy;
-    }
-```
-`@Autowired`의 `required` 속성을 이용해서 필수로 의존받아야 하는지 여부를 지정해줄 수 있다.   
-사실, `@Autowired` 의 기본 동작은 주입할 대상이 없으면 오류가 발생한다.    
-그렇기에 주입할 대상이 없어도 동작하게 하려면 `@Autowired(required = false)` 로 지정하면 된다.
-    
 **만약, 생성자 주입이랑 Setter가 동시에 존재한다면? 🤔**        
   
 ```java
