--- a/01 IoC 컨테이너/02 의존관계 주입.md
+++ b/01 IoC 컨테이너/02 의존관계 주입.md
@@ -61,8 +61,9 @@ public class OrderServiceImpl implements OrderService {
 * **선택**,**변경** 가능성이 있는 의존 관계에서 사용된다.    
 * 자바빈 프로퍼티 규약의 `Setter 메서드` 방식을 사용하는 방법이다.     
   * 스프링에서는 `자바빈 프로퍼티 규약`을 이용한 자동화 기능이 많다.  
+  * 대표적인 자동화 기능으로, `request 파라미터`에 대한 `setter`를 만들면 알아서 값을 주입받는다.   
   * `Setter 주입`도 이러한 자동화 중 하나이니 [자바빈 프로퍼티 규약](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=rbamtori&logNo=220760147541)에 대해서 알아보는 것을 추천한다.     
-     
+       
 ```java
 @Component
 public class OrderServiceImpl implements OrderService {
@@ -77,64 +78,10 @@ public class OrderServiceImpl implements OrderService {
 ```
 
 **만약, 생성자 주입이랑 Setter가 동시에 존재한다면? 🤔**        
-  
-```java
-import hello.core.discount.DiscountPolicy;
-import hello.core.member.Member;
-import hello.core.member.MemberRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
-@Component
-public class OrderServiceImpl implements OrderService {
-
-    private MemberRepository memberRepository;
-    private DiscountPolicy discountPolicy;
-
-    @Autowired
-    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
-        System.out.println("memberRepository = " + memberRepository);
-        System.out.println("discountPolicy = " + discountPolicy);
-        this.memberRepository = memberRepository;
-        this.discountPolicy = discountPolicy;
-    }
-
-    @Override
-    public Order createOrder(Long memberId, String itemName, int itemPrice) {
-        Member member = memberRepository.findById(memberId);
-        int discountPrice = discountPolicy.discount(member, itemPrice);
-        return new Order(memberId, itemName, itemPrice, discountPrice);
-    }
-
-    @Autowired
-    public void setMemberRepository(MemberRepository memberRepository) {
-        System.out.println("memberRepository = " + memberRepository);
-        this.memberRepository = memberRepository;
-    }
-
-    @Autowired
-    public void setDiscountPolicy(DiscountPolicy discountPolicy) {
-        System.out.println("discountPolicy = " + discountPolicy);
-        this.discountPolicy = discountPolicy;
-    }
-
-}
-
-```
-**결과**
-```java
-memberRepository = hello.core.member.MemoryMemberRepository@78dd667e
-discountPolicy = hello.core.discount.RateDiscountPolicy@10db82ae
-memberRepository = hello.core.member.MemoryMemberRepository@78dd667e
-discountPolicy = hello.core.discount.RateDiscountPolicy@10db82ae
-```
-실제로 돌려보면, 두 의존 관계 주입 방법 모두 실행되는 것을 알 수 있다.     
+실제로 돌려보면, **두 의존 관계 주입 방법 모두 실행되는 것을 알 수 있다.**     
 사실, 앞서 말했듯이 두 의존 관계 주입 방법의 시점이 달라서 가능했던 것이다.   
-        
-**개인적인 궁금증 순서는 어떻게 될까? 🤔**        
-        
-        
-## 필드 주입      
+          
+# 📕 필드 주입(그켬)        
 이름 그대로 필드에 바로 주입하는 방법이다.    
 한 가지 특이점이 있는데, 접근 지정자가 `private`여도 의존 관계를 주입할 수 있다.     
 이는 자바의 `Reflection`이라는 기능을 이용해서 빈을 주입하기 때문이다.    
