--- a/01 IoC 컨테이너/02 의존관계 주입.md
+++ b/01 IoC 컨테이너/02 의존관계 주입.md
@@ -82,10 +82,47 @@ public class OrderServiceImpl implements OrderService {
 사실, 앞서 말했듯이 두 의존 관계 주입 방법의 시점이 달라서 가능했던 것이다.   
           
 # 📕 필드 주입(그켬)        
-이름 그대로 필드에 바로 주입하는 방법이다.    
-한 가지 특이점이 있는데, 접근 지정자가 `private`여도 의존 관계를 주입할 수 있다.     
-이는 자바의 `Reflection`이라는 기능을 이용해서 빈을 주입하기 때문이다.    
-  
+> 이름 그대로 필드에 바로 주입하는 방법이다.    
+
+필드 주입은 한 가지 특이점이 있는데, **접근 지정자가 `private`여도 의존 관계를 주입할 수 있다.**        
+이는 자바의 `Reflection`이라는 기능을 이용해서 빈을 주입하기 때문이다.      
+
+```java
+import java.util.Arrays;
+import java.util.Objects;
+
+public class ContainerService {
+	
+    //매개값으로 들어온 타입의 인스턴스를 반환하는 메소드
+    public static <T> T getObject(Class<T> classType){
+        T instance = createInstance(classType);
+        Arrays.stream(classType.getDeclaredFields()).forEach(f -> {
+        
+            if(Objects.nonNull(f.getAnnotation(Inject.class))){
+                Object fieldInstance = createInstance(f.getType());
+                f.setAccessible(true);                                // private 필드에 접근이 가능하도록 설정한다.  
+                try {
+                    f.set(instance, fieldInstance); 	              // private 필드에 값을 넣는다.   
+                } catch (IllegalAccessException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+        });
+        return instance;
+    }
+	
+    //인스턴스를 만드는 메소드
+    private static <T> T createInstance(Class<T> classType) {
+        try {
+            return classType.getConstructor(null).newInstance();
+        } catch(Exception e){
+            throw new RuntimeException(e);
+        }
+    }
+}
+```
+[참고 사이트](https://sas-study.tistory.com/271)    
+    
 **특징**
 * 코드가 간결하지만, 외부에서 변경이 불가능해서 테스트 하기 힘들다는 치명적인 단점이 있다.
 * DI 프레임워크가 없으면 아무것도 할 수 없다.
