Update 02 의존관계 주입.md

--- a/01 IoC 컨테이너/02 의존관계 주입.md
+++ b/01 IoC 컨테이너/02 의존관계 주입.md
@@ -84,6 +84,53 @@ public class OrderServiceImpl implements OrderService {
 # 📕 필드 주입        
 > 이름 그대로 필드에 바로 주입하는 방법이다.    
 
+* 코드가 간결하지만, 외부에서 변경이 불가능해서 테스트 하기 힘들다는 치명적인 단점이 있다.
+* DI 프레임워크가 없으면 아무것도 할 수 없다.
+* 리플렉션으로 인한 기본 생성자가 필요하다
+   
+```java
+@Component
+public class OrderServiceImpl implements OrderService {
+
+    @Autowired  private MemberRepository memberRepository;
+    @Autowired  private DiscountPolicy discountPolicy;
+
+    @Override
+    public Order createOrder(Long memberId, String itemName, int itemPrice) {
+        Member member = memberRepository.findById(memberId);
+        int discountPrice = discountPolicy.discount(member, itemPrice);
+        return new Order(memberId, itemName, itemPrice, discountPrice);
+    }
+    
+}
+```
+```
+    // NullPointer Exception 이 뜬다.
+    @Test
+    void fieldInjectionTest(){
+        OrderServiceImpl orderService = new OrderServiceImpl();
+        orderService.createOrder(1L, "itemA", 10000);
+    }
+```      
+테스트 코드에서는 객체를 주입해줄 방법이 없어 `NullPointerException`이 발생한다.      
+이를 해결하기 위해서는 억지로라도 불필요한 `Setter`를 만들어야한다.   
+
+```java
+    @Test
+    void fieldInjectionTest(){
+        OrderServiceImpl orderService = new OrderServiceImpl();
+        
+        orderService.setMemberRepository(new MemoryMemberRepository()); 	// setter 사용 
+        orderService.setDiscountPolicy(new FixDiscountPolicy()); 		// setter 사용 
+
+        orderService.createOrder(1L, "itemA", 10000);
+    }
+```
+이러한 방식은 매우 좋지 않은 것으로 필드 의존 관계 주입은 거의 사용하지 말자!     
+애플리케이션의 실제 코드와 관계 없는 테스트 코드,      
+스프링 설정을 목적으로 하는 `@Configuration` 같은 곳에서만 코드의 가독성을 위해 특별한 용도로 사용하자        
+  
+## 📖 필드 주입과 Reflection
 필드 주입은 한 가지 특이점이 있는데, **접근 지정자가 `private`여도 의존 관계를 주입할 수 있다.**        
 이는 자바의 `Reflection`이라는 기능을 이용해서 빈을 주입하기 때문이다.      
 
@@ -121,92 +168,18 @@ public class ContainerService {
     }
 }
 ```
+리플렉션을 이용해 `private 필드`에 주입을 진행했고 이런 방법이 있다만 알아두자.   
+참고로 리플렉션으로 객체를 만들기 위해서는 기본 생성자(파라미터가 없는)가 필요하므로 이점 숙지하자(JPA도 나온다)        
+   
 [참고 사이트](https://sas-study.tistory.com/271)    
-    
-**특징**
-* 코드가 간결하지만, 외부에서 변경이 불가능해서 테스트 하기 힘들다는 치명적인 단점이 있다.
-* DI 프레임워크가 없으면 아무것도 할 수 없다.
-
-```java
-@Component
-public class OrderServiceImpl implements OrderService {
-
-    @Autowired  private MemberRepository memberRepository;
-    @Autowired  private DiscountPolicy discountPolicy;
-
-    @Override
-    public Order createOrder(Long memberId, String itemName, int itemPrice) {
-        Member member = memberRepository.findById(memberId);
-        int discountPrice = discountPolicy.discount(member, itemPrice);
-        return new Order(memberId, itemName, itemPrice, discountPrice);
-    }
-    
-    // 테스트 용도
-    public MemberRepository getMemberRepository() {
-        return memberRepository;
-    }
-
-}
-```
-하지만, 이와 같이 코드를 작성하면 테스트를 하기 힘들다는 단점이 있다.  
-정확히는 너무 의존적이여서, 다른 인스턴스를 넣어서 테스트한다던가 할 수 없다.   
-
-```
-    // NullPointer Exception 이 뜬다.
-    @Test
-    void fieldInjectionTest(){
-        OrderServiceImpl orderService = new OrderServiceImpl();
-        orderService.createOrder(1L, "itemA", 10000);
-    }
-```
-위 코드처럼 만약 `생성자` or `Setter`가 없다면       
-테스트 코드에서는 객체를 주입해줄 방법이 없어 `NullPointerException`이 발생한다.        
-
-이를 해결하기 위해서는 억지로라도 불필요한 `Setter`를 만들어야한다.   
-
-```java
-    @Test
-    void fieldInjectionTest(){
-        OrderServiceImpl orderService = new OrderServiceImpl();
-        
-        orderService.setMemberRepository(new MemoryMemberRepository());
-        orderService.setDiscountPolicy(new FixDiscountPolicy());
-
-        orderService.createOrder(1L, "itemA", 10000);
-    }
-```
-물론, 스프링 테스트를 이용하여 테스트를 진행할 수 있지만     
-컨테이너를 올리고 서버를 띄우는 무거운 작업을 번번히 해줘야하며       
-순수 자바 코드로 이루어진 단위 테스트는 진행할 수 없다.         
-            
-또한 `Setter`가 생성되었기에, 불변을 보장할 수 없으며      
-차라리 `Setter` 의존 관계 주입을 하는 것이 더 나을 수 있을거라 생각이든다.       
       
-필드 의존 관계 주입에 대해서 말하자면, 사용하지 말자!     
-애플리케이션의 실제 코드와 관계 없는 테스트 코드,      
-스프링 설정을 목적으로 하는 `@Configuration` 같은 곳에서만 특별한 용도로 사용하자      
+# 📙 일반 메서드 주입
+> 일반 메서드에서도 `@Autowired`를 통해 의존 관계 주입을 받을 수 있다.   
 
-참고로, `@Configuration`이 붙어있는 클래스는 빈을 등록하는 클래스일 것이다.   
-그렇기에 `@Autowired`를 필드 의존 관계 주입으로 붙여서 사용하는 것도 나쁘지 않다.   
-하지만, `@Bean` 에서 파라미터에 의존관계는 자동 주입된다는 특징이 있으니  
-오히려 `@Bean` 파라미터를 이용하는 편이 낫다.  
-  
-## 일반 메서드 주입
-일반 메서드에서도 `@Autowired`를 통해 의존 관계 주입을 받을 수 있다.   
-
-**특징**   
 * 한번에 여러 필드를 주입받을 수 있다.   
 * 하지만, 일반적으로 사용하지는 않는다.  
 
 ```java
-package hello.core.order;
-
-import hello.core.discount.DiscountPolicy;
-import hello.core.member.Member;
-import hello.core.member.MemberRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
 @Component
 public class OrderServiceImpl implements OrderService {
 
@@ -228,74 +201,18 @@ public class OrderServiceImpl implements OrderService {
 
 }
 ```
-파라미터에 존재하는 여러 필드를 대상으로 의존받을 수 있다는 것이 장점이다.       
-여기에 **만약 빈이 아닌 다른 필드가 하나라도 온다면?** 당연하게도 동작하지 않는다.        
-  
-# 옵션처리   
-가끔은 주입할 스프링 빈이 없어도 동작을 해야하는 경우도 있을 것이다.      
-그런데 `@Autowired`만 사용하면 `required` 옵션의 기본값이 true 로 되어 있어서      
-자동 주입 대상이 없으면 오류를 발생시킨다.     
-           
-이런 자동 주입 대상을 `옵션`으로 처리하는 방법은 다음과 같다.        
+파라미터에 존재하는 여러 필드를 대상으로 의존받을 수 있다는 것이 장점이다.          
+하지만, **만약 빈이 아닌 다른 필드가 하나라도 온다면?🤔 당연하게도 동작하지 않는다.**           
+     
+# 📓 의존관계 옵션처리    
+`@Autowired(required=true/false)`를 이용하면 `의존 관계 주입`에 대한 선택여부를 지정할 수 있다.   
+        
+**자동 주입 대상을 `옵션`으로 처리하는 다양한 방법**           
 * **@Autowired(required=false) :** 자동 주입할 대상이 없으면 수정자 메서드 자체가 호출 안된다.      
 * **org.springframework.lang.@Nullable :** 자동 주입할 대상이 없으면 `null`이 입력된다.    
 * **Optional<> :** 자동 주입할 대상이 없으면 `Optional.empty`가 입력된다.    
-   
-**src.test.hello.core.autowired.AutowiredTest**  
-```java
-package hello.core.autowired;
-
-import hello.core.member.Member;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.ApplicationContext;
-import org.springframework.context.annotation.AnnotationConfigApplicationContext;
-import org.springframework.lang.Nullable;
-
-import java.util.Optional;
-
-public class AutowiredTest {
-
-    @Test
-    void AutowiredOption() {
-        ApplicationContext ac = new AnnotationConfigApplicationContext(TestBean.class);
-    }
-
-    static class TestBean {
-
-        @Autowired(required = false) // 빈이 없을 경우, 해당 메서드를 호출하지 않는다. DI 안한다.
-        public void setNoBean1(Member noBean1) {
-            // 스프링이 관리하지 않는 빈을 파라미터로 받았다.
-            System.out.println("noBean1 = " + noBean1);
-        }
-
-        @Autowired
-        public void setNoBean2(@Nullable Member noBean2) { // 호출은 되지만 null
-            System.out.println("noBean2 = " + noBean2);
-        }
-
-        @Autowired
-        public void setNoBean2(Optional<Member> noBean3) { // Optional.empty
-            System.out.println("noBean3 = " + noBean3);
-        }
-
-    }
-}
-
-```
-`Member`는 스프링 빈이 아니라는 특징을 이용해서 만든 테스트케이스다.           
-`setNoBean1()` 은 `@Autowired(required=false)` 이므로 호출 자체가 안된다.   
-`@Autowired(required=false)`는 주입할 대상이 없으면 호출을 하지 않기 때문이다.   
-   
-**실행 결과**
-```
-noBean3 = Optional.empty
-noBean2 = null
-```
-`@Nullable, Optional`은 스프링 전반에 걸쳐서 지원된다.      
-예를 들어서 생성자 자동 주입에서 특정 필드에만 사용해도 된다.    
-    
-# 생성자 주입을 사용해라!    
+       
+# 📔 생성자 주입을 사용해라!    
 최근, 스프링 프레임워크를 포함한 DI 프레이뭐크 대부분이 생성자 주입을 권장하고 있다.     
         
 **불변**       
