--- a/01 IoC 컨테이너/02 의존관계 주입1.md
+++ b/01 IoC 컨테이너/02 의존관계 주입1.md
@@ -215,250 +215,33 @@ public class OrderServiceImpl implements OrderService {
 # 📔 생성자 주입을 사용해라!    
 최근, 스프링 프레임워크를 포함한 `DI 프레임워크` 대부분이 생성자 주입을 권장하고 있다.     
         
-**불변**       
-* 대부분의 의존관계 주입은 한번 일어나면 애플리케이션 종료시점까지 의존관계를 변경할 일이 없다.   
-  오히려, 애플리케이션 종료 전까지 변하면 안된다.         
-* 수정자 주입을 사용하면, 메서드를 public으로 열어두고 이로인해 변경 가능성이 높아진다.   
-* 생성자 주입은 객체를 생성할 때, 딱 1번만 호출되므로 이후에 호출되는 일이 없다.   
+## 📖 불변       
+의존관계 주입은 한번 일어나면 애플리케이션 **종료시점까지 의존관계를 변경할 일이 없다.**   
+오히려, 애플리케이션 종료 전까지 변하면 안된다.          
+그러나, **수정자 주입을 사용하면, 메서드를 public으로 열어두고 이로 인해 변경 가능성이 높아진다.**         
+**생성자 주입은 객체를 생성할 때, 딱 1번만 호출되므로 이후에 호출되는 일이 없기에 이를 이용하자**        
       
-**누락**        
-`Setter 의존 관계 주입`을 기준으로 설명을 해보려 한다.     
-      
-프레임워크 없이 순수한 자바 코드를 이용한다고 가정 할 때            
-우선, 객체를 생성하고, `Setter`를 통해서 의존 관계를 직접 넣어주어야한다.             
-그런데 만약, `Setter` 호출을 하지 않는 경우는 어떻게 될까?              
+## 📖 누락        
+`Setter 의존 관계 주입`만을 사용한다고 가정을 해보자면   
+우선, 객체를 생성하고, `Setter`를 통해서 의존 관계를 직접 넣어주는 방식으로 진행될 것이다.     
    
-아이러니하게도 **`컴파일 에러`가 발생하지 않으며 `NullPointerException`이 발생하는 것을 알 수 있다.**             
+**그런데 만약, `Setter` 호출을 하지 않는 경우는 어떻게 될까?🤔**                      
+아이러니하게도 **`컴파일 에러`가 발생하지 않으며 `NullPointerException`이 발생할 수 있다.**             
 이렇듯, `Setter`는 일종의 메서드이기 때문에 호출을 누락할 수 있다는 문제점이 있다.   
-        
-반대로 생성자 중비을 사용하면 값이 없을 경우 컴파일 오류가 발생할 수 있으며   
+          
+반대로 생성자 주입을 사용하면 값이 없을 경우 컴파일 오류가 발생할 수 있으며   
 개발자는 이로인해 자신의 코드를 실행 전에 수정할 수 있는 기회를 얻게된 셈이다.  
    
-**final**   
-생성자 주입을 사용하면 다른 의존 관계 주입 방법과는 다르게 `final`을 사용할 수 있게 된다.    
-그래서 생성자를 통해 값을 설정하지 않는 실수를 발생한다면 이를 컴파일 에러로 막아준다.  
-
-```java
-package hello.core.order;
-
-import hello.core.discount.DiscountPolicy;
-import hello.core.member.Member;
-import hello.core.member.MemberRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
-@Component
-public class OrderServiceImpl implements OrderService {
-
-    private final MemberRepository memberRepository;		// 에러뜸
-    private final DiscountPolicy discountPolicy;		// 에러뜸 
-
-    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
-    	// 값 초기화 누락했다.  
-    }
-
-    @Override
-    public Order createOrder(Long memberId, String itemName, int itemPrice) {
-        Member member = memberRepository.findById(memberId);
-        int discountPrice = discountPolicy.discount(member, itemPrice);
-        return new Order(memberId, itemName, itemPrice, discountPrice);
-    }
-
-    // 테스트 용도
-    public MemberRepository getMemberRepository() {
-        return memberRepository;
-    }
-
-}
-```
-누락 단계에 사용되던 테스트 코드나,    
+## 📖 final   
+생성자 주입을 사용하면 다른 의존 관계 주입 방법과는 다르게 **`final`을 사용할 수 있게 된다.**         
+**그래서 생성자를 통해 값을 설정하지 않는 실수를 발생한다면 이를 컴파일 에러로 막아준다.**      
+   
 클래스 생성자 내부적으로 갑을 할당하는 경우를 누락했을 때,   
 `final` 키워드가 없었다면 자연스럽게 로직이 수행되다가 `NullPointerException`이 뜰텐데   
-`final` 키워드를 사용함으로써 컴파일 에러를 이끌어낼 수 있게 되었다.   
-  
-기억하자! **컴파일 에러는 세상에서 가장 빠르고, 좋은 오류다!**  
-
-참고로,   
-수정자 주입과 필드 주입은 빈을 생성한 후에 호출하기에 **필드에 `final` 키워드를 사용할 수 없으며,**    
-`final` 키워드는 오직 생성자 주입에서만 가능하다.         
+**`final` 키워드를 사용함으로써 컴파일 에러를 이끌어낼 수 있게 되었다.**      
+(참고로, 수정자 주입과 필드 주입은 `final` 키워드를 사용할 수 없다.)       
+   
+기억하자! **컴파일 에러는 세상에서 가장 빠르고, 좋은 오류다! 😉**  
 
 **정리**   
-* 생성자 주입 방식을 선택하는 이유는 여러가지가 있지만,   
-  프레임워크에 의존하지 않고, 순수한 자바 언어의 특징을 잘 살리는 방법이기도 하다.
-* 윗말에 덧붙여 말하자면, 순수한 자바 언어의 특징을 살렸기에 테스트에도 용이하다  
-* 기본으로 생성자 주입을 사용하고, 필수 값이 아닌 경우에는 수정자 주입 방식을 옵션으로 부여하면 된다. 
-* 생성자 주입과 수정자 주입을 동시에 사용할 수 있다.
 * 항상 생성자 주입을 선택해라! 그리고 가끔 옵션이 필요하면 수정자 주입을 선택해라. 
-* 필드 주입은 사용하지않는게 좋다   
-
-
-
-# 롬복과 최신 트랜드      
-롬복은 주로 사용되는 반복 코드들을 대신 작성해주는 라이브러리이다.           
-예를 들면 `Getter`, `Setter`, `ToString`, `생성자`와 같은 코드들이 있다.            
-그리고 롬복은 **어노테이션 프로세서를 기반으로 동작을 한다.**     
-    
-**롬복 설정**
-
-1. `Prefrences(윈도우 File Settings)` -> `plugin` -> `lombok` 검색 설치 실행 (재시작)
-2. `Prefrences` -> `Annotation Processors` 검색 -> `Enable annotation processing` 체크 (재시작)
-3. 임의의 테스트 클래스를 만들고 `@Getter, @Setter` 확인    
-    * 필자같은 경우 community 사용시,   
-      `Annotation Processors`이 동작안해서 런타임에러가 발생하는 겨웅가 종종 있었다.   
-      그렇기에 애플리케이션을 `run`하기 전에 잘 돌아가는지 확인부터 하자.     
-      
-이후, `build.gradle`을 아래와 같이 변경해준다.  
-   
-**build.gradle**    
-```java
-plugins {
-    id 'org.springframework.boot' version '2.4.4'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
-}
-
-group = 'hello'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-repositories {
-    mavenCentral()
-}
-
-configurations {
-    compileJava {
-        extendsFrom annotationProcessor
-    }
-}
-
-dependencies {
-    implementation 'org.projectlombok:lombok'
-
-    compileOnly'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    testCompileOnly'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
-
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-test {
-    useJUnitPlatform()
-}
-```
-
-**적용 확인**
-```java
-package hello.core;
-
-import lombok.Getter;
-import lombok.Setter;
-import lombok.ToString;
-
-@Getter
-@Setter
-@ToString
-public class HelloLombok {
-
-    private String name;
-    private int age;
-
-    public static void main(String[] args) {
-        HelloLombok helloLombok = new HelloLombok();
-        helloLombok.setName("hi");
-        System.out.println("helloLombok = " + helloLombok);
-
-        String name = helloLombok.getName();
-        System.out.println("name = " + name);
-    }
-}
-```
-위 코드를 보면 클래스에는 실질적인 `Getter/Setter` 메서드가 존재하지 않지만   
-컴파일 에러도 없으며, 해당 메서드를 호출하고 사용하고 있음을 알 수 있다.     
-
-**롬복으로 리팩터링 및 비교**
-```java
-package hello.core.order;
-
-import hello.core.discount.DiscountPolicy;
-import hello.core.member.Member;
-import hello.core.member.MemberRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
-@Component
-public class OrderServiceImpl implements OrderService {
-
-    private final MemberRepository memberRepository;
-    private final DiscountPolicy discountPolicy;
-
-    @Autowired
-    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
-        this.memberRepository = memberRepository;
-        this.discountPolicy = discountPolicy;
-    }
-
-    @Override
-    public Order createOrder(Long memberId, String itemName, int itemPrice) {
-        Member member = memberRepository.findById(memberId);
-        int discountPrice = discountPolicy.discount(member, itemPrice);
-        return new Order(memberId, itemName, itemPrice, discountPrice);
-    }
-
-    // 테스트 용도
-    public MemberRepository getMemberRepository() {
-        return memberRepository;
-    }
-
-}
-
-```
-
-```java
-package hello.core.order;
-
-import hello.core.discount.DiscountPolicy;
-import hello.core.member.Member;
-import hello.core.member.MemberRepository;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Component;
-
-@RequiredArgsConstructor
-@Component
-public class OrderServiceImpl implements OrderService {
-
-    private final MemberRepository memberRepository;
-    private final DiscountPolicy discountPolicy;
-
-    @Override
-    public Order createOrder(Long memberId, String itemName, int itemPrice) {
-        Member member = memberRepository.findById(memberId);
-        int discountPrice = discountPolicy.discount(member, itemPrice);
-        return new Order(memberId, itemName, itemPrice, discountPrice);
-    }
-
-    // 테스트 용도
-    public MemberRepository getMemberRepository() {
-        return memberRepository;
-    }
-
-}
-```  
-롬복을 사용하면서, 매 클래스마다 반복적으로 작성해야할 코드들을 어노테이션으로 해결했다.         
-참고로 위 코드는 생성자가 1개일 경우 `@Autowired`가 붙는다는 특징을 활용한 것이다.             
-추가적으로, 필자(kwj1270)의 추천으로 `@Builder`라는 어노테이션도 있으니 이를 활용하면 좋을 것이며      
-이외에도 [실무에서 유용한 롬복 사용법](https://cheese10yun.github.io/lombok/)에 대해서 YUN님이께서 정리해주셨으니 이점 참고하자    
-          
-
-
-
-
-
-    
-    
-  
-
-
-
