--- a/01 IoC 컨테이너/02 의존관계 주입1.md
+++ b/01 IoC 컨테이너/02 의존관계 주입1.md
@@ -245,3 +245,41 @@ public class OrderServiceImpl implements OrderService {
 
 **정리**   
 * 항상 생성자 주입을 선택해라! 그리고 가끔 옵션이 필요하면 수정자 주입을 선택해라. 
+   
+# 🔥 순환참조 문제       
+> `의존 관계 주입`에서는 **순환 참조라는 문제가 존재한다.**  
+      
+## 순환 참조란?   
+순환 참조란, 말 그대로 서로 사이클을 형성하여 참조하는 것으로     
+**서로 다른 여러 빈들이 서로 물고 늘어져서 계속 연결되고 있음을 의미한다.**       
+
+**이상적인 참조**
+```java
+BeanA -> BeanB -> BeanC
+```
+순환 참조가 일어나지 않는다면   
+스프링은 의존 관계에 맞추어 빈 생성 순서를 정하고 이에 알맞게 주입을 진행해준다.  
+
+**순환 참조**
+```java
+BeanA -> BeanB -> BeanA ...
+```
+그러나 순환 참조가 일어날 경우 사이클이 형성되어있기에 끊임없이 의존하는 형태가 되어  
+스프링에서 에러 메시지를 뱉곤한다.  
+
+
+
+
+
+
+
+
+
+## 순환 참조 해결법
+
+
+
+
+
+
+
