Update 02 의존관계 주입1.md

--- a/01 IoC 컨테이너/02 의존관계 주입1.md
+++ b/01 IoC 컨테이너/02 의존관계 주입1.md
@@ -265,13 +265,12 @@ BeanA -> BeanB -> BeanA ...
 그러나 순환 참조가 일어날 경우 사이클이 형성 되어있기에 끊임없이 의존하는 형태가 되어     
 스프링에서는 어떤 빈을 먼저 생성하고 의존해야할지에 대해서 찾지 못해 에러 메시지를 뱉는다.    
 
-
-```
+```java
 public interface CourseService {
     void courseMethod();
 }
 ```
-```
+```java
 @Service
 public class CourseServiceImpl implements CourseService {
 
@@ -284,12 +283,12 @@ public class CourseServiceImpl implements CourseService {
     }
 }
 ```
-```
+```java
 public interface StudentService {
     void studentMethod();
 }
 ```
-```
+```java
 @Service
 public class StudentServiceImpl implements StudentService {
 
