Update 02 의존관계 주입1.md

--- a/01 IoC 컨테이너/02 의존관계 주입1.md
+++ b/01 IoC 컨테이너/02 의존관계 주입1.md
@@ -262,9 +262,11 @@ BeanA -> BeanB -> BeanC
 ```java
 BeanA -> BeanB -> BeanA ...
 ```   
-그러나 순환 참조가 일어날 경우 사이클이 형성 되어있기에 끊임없이 의존하는 형태가 되어     
-스프링에서는 어떤 빈을 먼저 생성하고 의존해야할지에 대해서 찾지 못해 에러 메시지를 뱉는다.    
-
+그러나 순환 참조가 일어날 경우 사이클이 형성 되어있기에 끊임없이 의존하는 형태가 되어       
+스프링에서는 어떤 빈을 먼저 생성하고 의존해야할지에 대해서 찾지 못해 에러 메시지를 뱉는다.        
+그리고 이러한 `순환 참조 문제`는 **애플리케이션을 구동하기 전까지는 존재 여부를 모른다** 는 치명적 단점이 있다.        
+  
+## 순환 참조 예시  
 ```java
 public interface CourseService {
     void courseMethod();
@@ -301,10 +303,18 @@ public class StudentServiceImpl implements StudentService {
     }
 }
 ```
-
-
-
-
+```sh
+java.lang.StackOverflowError: null
+```
+위 코드는 서로 다른 Service 클래스에서 서로를 참조하고 있기에 발생한 `순환 참조`이다.       
+**순환 참조의 가장 큰 문제점**은 서로의 메서드에서 다른 클래스의 메서드를 호출하니          
+끝나지 않는 재귀문처럼 계속 메서드를 수행하며 결국에는 `StackOverflowError` 를 발생시키고 죽고 말 것이다.        
+  
+**StackOverFlow가 발생했다는 것은 그래도 빈 생성이 잘 되었다는 말은 아닌가? 🤔**     
+사실 위 코드를 보면 알 수 있는 점은 바로 **필드 주입을 사용했다는 점**이다.         
+사실, `필드 주입`이나, `수정자 주입`은 객체를 생성하고 나서 의존 관계를 맺는 방식이다.      
+즉, 객체 생성시점에는 순환참조가 일어나는지 아닌지 발견할 수 있는 방법이 없다.       
+**그렇기 때문에 애플리케이션이 멀쩡히 돌아가다고 언제 문제가 발생할 수 있을지 모른다.**      
 
 
 ## 순환 참조 해결법
