Update 02 의존관계 주입1.md

--- a/01 IoC 컨테이너/02 의존관계 주입1.md
+++ b/01 IoC 컨테이너/02 의존관계 주입1.md
@@ -311,10 +311,10 @@ java.lang.StackOverflowError: null
 끝나지 않는 재귀문처럼 계속 메서드를 수행하며 결국에는 `StackOverflowError` 를 발생시키고 죽고 말 것이다.        
   
 **StackOverFlow가 발생했다는 것은 그래도 빈 생성이 잘 되었다는 말은 아닌가? 🤔**     
-사실 위 코드를 보면 알 수 있는 점은 바로 **필드 주입을 사용했다는 점**이다.         
-사실, `필드 주입`이나, `수정자 주입`은 객체를 생성하고 나서 의존 관계를 맺는 방식이다.      
-즉, 객체 생성시점에는 순환참조가 일어나는지 아닌지 발견할 수 있는 방법이 없다.       
-**그렇기 때문에 애플리케이션이 멀쩡히 돌아가다고 언제 문제가 발생할 수 있을지 모른다.**      
+* 위 코드를 보면 알 수 있는 점은 바로 **필드 주입을 사용했다는 점**이다.         
+* 사실, `필드 주입`이나, `수정자 주입`은 객체를 생성하고 나서 의존 관계를 맺는 방식이다.      
+* 즉, 객체 생성시점에는 순환참조가 일어나는지 아닌지 발견할 수 있는 방법이 없다.       
+* **그렇기 때문에 애플리케이션이 멀쩡히 돌아가다고 언제 문제가 발생할 수 있을지 모른다.**      
 
 
 ## 순환 참조 해결법
