Update 02 의존관계 주입1.md

--- a/01 IoC 컨테이너/02 의존관계 주입1.md
+++ b/01 IoC 컨테이너/02 의존관계 주입1.md
@@ -246,7 +246,7 @@ public class OrderServiceImpl implements OrderService {
 **정리**   
 * 항상 생성자 주입을 선택해라! 그리고 가끔 옵션이 필요하면 수정자 주입을 선택해라. 
    
-# 🔥 순환참조 문제       
+# 🔥 순환참조 문제(생성자 주입을 사용해라! 2)         
 > 의존 관계 주입에서, **순환 참조**라는 문제가 발생할 수 있다.   
          
 ## 순환 참조란?   
@@ -315,13 +315,74 @@ java.lang.StackOverflowError: null
 * 사실, `필드 주입`이나, `수정자 주입`은 객체를 생성하고 나서 의존 관계를 맺는 방식이다.      
 * 즉, 객체 생성시점에는 순환참조가 일어나는지 아닌지 발견할 수 있는 방법이 없다.       
 * **그렇기 때문에 애플리케이션이 멀쩡히 돌아가다고 언제 문제가 발생할 수 있을지 모른다.**      
+   
+## 순환 참조 해결법    
+순환 참조를 해결하는 명확한 기술이나 방법은 없다.       
+즉, 순환 참조를 해결하고자 한다면 애초에 **설계부터 다시 진행을 해야한다.**       
 
+하지만, 애플리케이션이 구동중인 상태에서 갑자기 순환참조가 발생하는 것보다   
+**애플리케이션이 구동될 때 순환 참조인지 감지하고 알려주는 방법이 있는데 바로 `생성자 주입`이다.**       
 
-## 순환 참조 해결법
+```java
+@Service
+public class CourseServiceImpl implements CourseService {
 
+    private final StudentService studentService;
 
+    @Autowired
+    public CourseServiceImpl(StudentService studentService) {
+        this.studentService = studentService;
+    }
 
+    @Override
+    public void courseMethod() {
+        studentService.studentMethod();
+    }
+}
+```
+```jav
+@Service
+public class StudentServiceImpl implements StudentService {
 
+    private final CourseService courseService;
 
+    @Autowired
+    public StudentServiceImpl(CourseService courseService) {
+        this.courseService = courseService;
+    }
 
+    @Override
+    public void studentMethod() {
+        courseService.courseMethod();
+    }
+}
+```
+
+앞선 코드를 위와 같이 변경을 한다 하더라도 순환 참조는 일어난다.      
+그러나 순환 참조인지를 검사하는 시점이 **빈을 생성하고 등록하는 시점**이기에    
+스프링에서는 아래와 같은 로그를 서버를 구동했을 때 바로 보여준다.     
+
+```sh
+***************************
+APPLICATION FAILED TO START
+***************************
+
+Description:
+
+The dependencies of some of the beans in the application context form a cycle:
+
+┌─────┐
+|  courseServiceImpl defined in file [/Users/yaboong/.../CourseServiceImpl.class]
+↑     ↓
+|  studentServiceImpl defined in file [/Users/yaboong/.../StudentServiceImpl.class]
+└─────┘
+```  
+     
+즉, 빈 생성시 아래와 같은 로직이 수행되면서 어떤 시점에 스프링이 그것을 캐치해서 순환참조라고 알려주는 것 같다.
+```java
+new CourseServiceImpl(new StudentServiceImpl(new CourseServiceImpl(new ...)))
+```
+이처럼 애플리케이션이 구동되다가 순환참조가 일어나 죽는 `필드 주입`과 `setter 주입`과 달리,      
+생성자 주입을 사용하면 객체 간 순환참조를 하고 있는 경우에 스프링 애플리케이션이 구동되지 않는다.     
+이는 곧, 애플리케이션을 구동하기 전에 개발자에게 미리 에러를 알려주는 것과 같으므로 **생성자 주입을 사용을 권장한다.**   
 
