Update 02 의존관계 주입1.md

--- a/01 IoC 컨테이너/02 의존관계 주입1.md
+++ b/01 IoC 컨테이너/02 의존관계 주입1.md
@@ -340,7 +340,7 @@ public class CourseServiceImpl implements CourseService {
     }
 }
 ```
-```jav
+```java
 @Service
 public class StudentServiceImpl implements StudentService {
 
