Update 02 의존관계 주입2.md

--- a/01 IoC 컨테이너/02 의존관계 주입2.md
+++ b/01 IoC 컨테이너/02 의존관계 주입2.md
@@ -1,147 +1,70 @@
-# 조회 빈이 2개 이상 - 문제       
-우리가 주로 사용하는 `@Autowired`는 타입(Type)을 기반으로 조회한다.         
-그렇기에 동일한 타입의 빈이 2개 존재한다면, 어떤 빈을 주입해야할지 모르기에 에러를 발생시킨다.     
-   
+조회 빈이 2개 이상일 때(문제)       
+====================================
+
+`@Autowired`는 **타입(Type)을 기반으로 조회한다.**            
+그렇기에 동일한 타입의 빈이 2개 존재한다면, 어떤 빈을 주입해야할지 모르기에 에러를 발생시킨다.       
+     
 ```java
 @Component    
-public class FixDiscountPolicy implements DiscountPolicy {}
-```
-```java
+class FixDiscountPolicy implements DiscountPolicy {}
+
 @Component
-public class RateDiscountPolicy implements DiscountPolicy {}그리고 이렇게 의존관계 자동 주입을 실행하면
+class RateDiscountPolicy implements DiscountPolicy {}
+
+@Service
+public class SampleService {
+    @Autowired
+    private DiscountPolicy discountPolicy;
+}
 ```
-```java
-@Autowired
-private DiscountPolicy discountPolicy
-```
-**결과**
-```
+```sh
 NoUniqueBeanDefinitionException: No qualifying bean of type 
 'hello.core.discount.DiscountPolicy' available: expected single matching bean 
 but found 2: fixDiscountPolicy,rateDiscountPolicy
 ```
+
 위와 같은 코드가 주어졌을 때, `NoUniqueBeanDefinitionException` 오류가 발생한다.
+        
+단편적인 해결 방법으로 상위 타입이 아닌 구체적인 하위 타입으로 지정할 수도 있지만,      
+**하위 타입으로 지정하는 것은 DIP를 위배시키고 유연성을 떨어뜨린다는 문제점에 사용에 알맞지 않다.**        
+또한, **이름만 다르고, 완전히 똑같은 타입의 스프링 빈이 2개 있을 때는 해결이 안된다.**      
 
-오류 메시지를 해석해보면,  
-하나의 빈을 기대했는데 `fixDiscountPolicy` , `rateDiscountPolicy` 2개가 발견되었다고 말해준다.
-               
-단편적인 해결 방법으로 상위 타입이 아닌 구체적인 하위 타입으로 지정할 수도 있지만,            
-하위 타입으로 지정하는 것은 DIP를 위배시키고 유연성을 떨어뜨린다는 문제점에 사용에 알맞지 않다.      
-또한, 이름만 다르고, 완전히 똑같은 타입의 스프링 빈이 2개 있을 때 해결이 안된다.   
-       
-스프링 빈을 수동 등록해서 문제를 해결해도 되지만,     
-의존 관계 자동 주입에서 해결하는 여러 방법이 있으니 이에 대해서 알아보자  
-
-# @Autowired 필드명, @Qualifier, @Primary
-주입 받을 빈 타켓이 2개이상일 때, 아래와 같은 방법으로 해결할 수 있다.   
+스프링 빈을 수동 등록해서 문제를 해결해도 되지만, 아래와 같은 방법으로 해결할 수 있다.   
    
 * @Autowired 필드명 매칭
 * @Qualifier -> @Qualifier 끼리 매칭 -> 빈 이름 지정    
 * @Primary 사용 
 
-## @Autowired 필드명   
-`@Autowired`는 단순히 타입으로만 의존 관계 주입을 진행하는 것은 아니다.    
-      
-* `@Autowired` 는 처음에는 타입 매칭을 시도하고,      
-* 여러 빈이 있으면 **필드 이름**, **파라미터 이름**으로 빈 이름을 추가매칭한다.    
+# 📕 @Autowired 필드명   
+> `@Autowired`는 단순히 타입으로만 의존 관계 주입을 진행하는 것은 아니다.    
 
-**기존 코드**
-```java
-@Autowired
-private DiscountPolicy discountPolicy
-```
-     
-**필드 명을 빈 이름으로 변경**  
+`@Autowired`는 아래와 같은 탐색 사이클을 갖는다.  
+
+1. 타입 매칭
+2. 필드 이름(필드 이름 == 빈 이름)  
+3. 파라미터 이름(파라미터 이름 == 빈 이름)
+
+즉, 여러 빈이 있으면 **타입 -> 필드 이름/파라미터 이름**으로 추가 매칭을 진행한다.    
+    
+**필드명을 기준으로 의존관계 주입**  
 ```java  
 @Autowired
 private DiscountPolicy rateDiscountPolicy
 ```
-필드 명이 `rateDiscountPolicy` 이 되면서 정상 주입이 되었다.         
-필드 명 매칭은 먼저 타입 매칭을 시도 하고 그 결과에 여러 빈이 있을 때 추가로 동작하는 기능이다.            
-       
-위 코드는 필드 주입을 예시로 적용을 한 사례이고           
-실제 생성자의 파라미터 변수의 이름에도 이 같은 기능이 동작하는지 테스트해보자       
 
+**파라미터 이름을 기준으로 의존관계 주입**   
 ```java
-@Component
-public class FixDiscountPolicy implements DiscountPolicy {
-    ...
-}
-```
-```java
-@Component
-public class RateDiscountPolicy implements DiscountPolicy{
-    ...
-}
-```
-위와 같이 `DiscountPolicy` 타입의 빈을 2개 등록을 했다.   
-    
-**OrderServiceImpl**
-```java
-@Component
-public class OrderServiceImpl implements OrderService {
-
-    ....
-    
-    @Autowired
-    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
-        this.memberRepository = memberRepository;
-        this.discountPolicy = discountPolicy;
-    }
-    
-    ...
-}
-```
-위와 같은 코드로 작성을 하면 주입 관계 에러가 발생한다.   
-왜냐하면 `@Autowired`는 타입을 기준으로 의존 관계를 찾지만,  
-같은 타입이 아닌 경우 필드명의 이름을 기준으로 의존 관계를 맺으려고 한다.   
-   
-하지만, 위 코드는 타입도 2개이며, 이름도 매칭되지 않으므로 에러가 발생한다.   
-   
-```java
-package hello.core.order;
-
-import hello.core.discount.DiscountPolicy;
-import hello.core.member.Member;
-import hello.core.member.MemberRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
-@Component
-public class OrderServiceImpl implements OrderService {
-
-    private final MemberRepository memberRepository;
-    private final DiscountPolicy discountPolicy;
-
     @Autowired
     public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy rateDiscountPolicy) {
         this.memberRepository = memberRepository;
         this.discountPolicy = rateDiscountPolicy;
     }
-
-    @Override
-    public Order createOrder(Long memberId, String itemName, int itemPrice) {
-        Member member = memberRepository.findById(memberId);
-        int discountPrice = discountPolicy.discount(member, itemPrice);
-        return new Order(memberId, itemName, itemPrice, discountPrice);
-    }
-
-    // 테스트 용도
-    public MemberRepository getMemberRepository() {
-        return memberRepository;
-    }
-
-}
 ```
-위와 같이 메서드 파라미터 변수명의 이름을       
-빈의 식별 이름으로 지정해주면, 2개 이상의 같은 타입의 빈이 있다하더라도      
-의존 관계를 주입 받을 수 있다.      
-  
-**@Autowired 정리**
-1. 타입 매칭
-2. 타입 매칭의 결과가 2개 이상일 때 필드 명, 파라미터 명으로 빈 이름 매칭
+
+위와 같이 변수명의 이름을 빈의 식별 이름으로 지정해주면, 
+2개 이상의 같은 타입의 빈이 있다하더라도 의존 관계를 주입 받을 수 있다.      
           
-## @Qualifier 사용     
+# 📘 @Qualifier 사용     
 `@Qualifier` 는 **추가 구분자**를 붙여주는 방법이다.              
 주입시 추가적인 방법을 제공하는 것이지 **빈 이름을 변경하는 것은 아니다!**         
 **빈 식별을 위한 메타 데이터**라고 생각하면 이해하기 편하다.         
