Update 02 의존관계 주입2.md

--- a/01 IoC 컨테이너/02 의존관계 주입2.md
+++ b/01 IoC 컨테이너/02 의존관계 주입2.md
@@ -70,7 +70,7 @@ private DiscountPolicy rateDiscountPolicy
 **빈 식별을 위한 메타 데이터**라고 생각하면 이해하기 편하다.         
 
 **RateDiscountPolicy**
-```
+```java
 @Component
 @Qualifier("mainDiscountPolicy")
 public class RateDiscountPolicy implements DiscountPolicy {
@@ -89,43 +89,13 @@ public class FixDiscountPolicy implements DiscountPolicy {
 `@Qualifier`는 빈 식별을 위한 추가 구분자,식별 메타 데이터 제공 어노테이션이다.        
 그렇기에 동일한 타입의 빈 등록시 `@Qualifier`를 통해 식별구문을 넣어준다.   
   
-
 **OrderServiceImpl**
 ```java
-package hello.core.order;
-
-import hello.core.discount.DiscountPolicy;
-import hello.core.member.Member;
-import hello.core.member.MemberRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.stereotype.Component;
-
-@Component
-public class OrderServiceImpl implements OrderService {
-
-    private final MemberRepository memberRepository;
-    private final DiscountPolicy discountPolicy;
-
     @Autowired
     public OrderServiceImpl(MemberRepository memberRepository,@Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy) {
         this.memberRepository = memberRepository;
         this.discountPolicy = discountPolicy;
     }
-
-    @Override
-    public Order createOrder(Long memberId, String itemName, int itemPrice) {
-        Member member = memberRepository.findById(memberId);
-        int discountPrice = discountPolicy.discount(member, itemPrice);
-        return new Order(memberId, itemName, itemPrice, discountPrice);
-    }
-
-    // 테스트 용도
-    public MemberRepository getMemberRepository() {
-        return memberRepository;
-    }
-
-}
 ``` 
 `@Qualifier`을 `DI`에서 사용하는 방법은 간단하다.                    
 의존 관계 주입을 받을 객체 옆에 `@Qualifier("식별자")`를 붙여주면 된다.                 
