--- a/01 IoC 컨테이너/02 의존관계 주입2.md
+++ b/01 IoC 컨테이너/02 의존관계 주입2.md
@@ -88,54 +88,41 @@ public class FixDiscountPolicy implements DiscountPolicy {
 ```  
 `@Qualifier`는 빈 식별을 위한 추가 구분자,식별 메타 데이터 제공 어노테이션이다.        
 그렇기에 동일한 타입의 빈 등록시 `@Qualifier`를 통해 식별구문을 넣어준다.   
-  
+     
 **OrderServiceImpl**
 ```java
     @Autowired
-    public OrderServiceImpl(MemberRepository memberRepository,@Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy) {
+    public OrderServiceImpl(MemberRepository memberRepository, @Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy) {
         this.memberRepository = memberRepository;
         this.discountPolicy = discountPolicy;
     }
 ``` 
-`@Qualifier`을 `DI`에서 사용하는 방법은 간단하다.                    
-의존 관계 주입을 받을 객체 옆에 `@Qualifier("식별자")`를 붙여주면 된다.                 
-그러면 `DI 컨테이너`에서 해당하는 식별자를 가진 빈을 찾아서 의존 관계 주입을 맺어준다.        
-  
-그리고 이러한 `@Qualifier`는  
-
+간단하게, **의존 관계 주입을 받을 객체 옆에 `@Qualifier("식별자")`를 붙여주면 된다.**                   
+그러면 `DI 컨테이너`에서 해당하는 식별자를 가진 빈을 찾아서 의존 관계 주입을 맺어준다.          
+     
+**`@Qualifier`는 사용 가능 영역(단, 참조 변수 옆에 붙여야한다.)**        
 * 필드 주입
 * 생성자 주입
 * Setter 주입
 * 일반 메서드 주입
-  
-모두에서 사용될 수 있다. (단, 참조 변수 옆에 붙여야한다.)      
    
-**그렇다면 궁금증, 해당하는 식별자가 없으면 어떻게되지? 🤔**        
-`@Qualifier`또한, `@Autowired`처럼 지정한 식별자를 이름으로 갖는 빈을 추가로 찾는다.   
-하지만, `@Qualifier`를 이용한 빈 조회시에는 이러한 방식을 사용하지 말고  
-**`@Autowired`를 이용한 빈 찾기 + `@Qualifier` 추가 구분자** 로만 사용하자        
-
-**직접 빈 등록시**   
-```java
-@Bean
-@Qualifier("mainDiscountPolicy")
-public DiscountPolicy discountPolicy() {
-    return new ...
-}
-```
-직접 빈 등록하는 방식에서도 이렇게 사용할 수가 있다.      
-       
 **@Qualifier 매칭 순서 정리**
 1. 같은 식별자를 가진 `@Qualifier`끼리 매칭    
 2. 빈 이름 매칭    
 3. NoSuchBeanDefinitionException 예외 발생   
-
-# @Primary   
-> 필자(kwj1270)은 사용해본 경험이 없지만, 실무에서는 많이 사용하는 어노테이션 같다.     
-         
-`@Primary`는 의존 관계 주입시 우선순위를 지정하는 메타 데이터 어노테이션이다.        
+   
+`@Qualifier`또한, `@Autowired`처럼     
+지정한 식별자를 이름으로 갖는 빈을 추가로 찾는다.     
+하지만, `@Qualifier`를 이용한 빈 조회시에는 이러한 방식을 사용하지 말고    
+**`@Autowired`를 이용한 빈 찾기 + `@Qualifier` 추가 구분자** 로만 사용하자        
+       
+# 📗 @Primary   
+> 필자(kwj1270)는 사용해본 경험이 없지만, 실무에서는 많이 사용하는 어노테이션 같다.     
+               
+`@Primary`는 의존 관계 주입시 **우선순위를 지정하는 메타 데이터 어노테이션이다.**          
 쉽게 설명하면, 여러 동일한 타입의 빈들중 `@Primary`가 붙은 빈을 우선으로 주입 받는다.   
 
+**RateDiscountPolicy**
 ```java
 @Component
 @Primary
@@ -143,6 +130,7 @@ public class RateDiscountPolicy implements DiscountPolicy {
     ...
 }
 ```
+**FixDiscountPolicy**
 ```java
 @Component
 public class FixDiscountPolicy implements DiscountPolicy {
@@ -151,17 +139,8 @@ public class FixDiscountPolicy implements DiscountPolicy {
 ```
 동일한 타입을 가진 빈이 여럿 등록 될 때,      
 메인이 되는 빈에 `@Primary` 어노테이션을 붙여준다.      
-  
+     
 ```java
-package hello.core.order;
-
-import hello.core.discount.DiscountPolicy;
-import hello.core.member.Member;
-import hello.core.member.MemberRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.stereotype.Component;
-
 @Component
 public class OrderServiceImpl implements OrderService {
 
@@ -171,64 +150,24 @@ public class OrderServiceImpl implements OrderService {
     @Autowired
     public OrderServiceImpl(MemberRepository memberRepository,DiscountPolicy discountPolicy) {
         this.memberRepository = memberRepository;
-        this.discountPolicy = discountPolicy;
+        this.discountPolicy = discountPolicy; // RateDiscountPolicy 가 들어온다.  
     }
-
-    @Override
-    public Order createOrder(Long memberId, String itemName, int itemPrice) {
-        Member member = memberRepository.findById(memberId);
-        int discountPrice = discountPolicy.discount(member, itemPrice);
-        return new Order(memberId, itemName, itemPrice, discountPrice);
-    }
-
-    // 테스트 용도
-    public MemberRepository getMemberRepository() {
-        return memberRepository;
-    }
-
 }
 ```   
-`@Primary`가 붙었던 빈은 최우선순위를 가지게 되므로             
-일반적인 주입 방법으로도 충돌 없이 빈을 의존 받을 수 있다.     
-   
-**그렇다면 `@Primary`가 붙는다면?🤔**      
-**`@Primary`는 한 개만 사용가능한가?🤔**       
-            
-`@Primary`는 최우선순위를 주는 것이다.        
-그렇기에 동일한 타입의 빈에 2번 이상 사용 불가능하다.        
-
-___
-   
-여기까지 보면 `@Primary` 와 `@Qualifier` 중에 어떤 것을 사용하면 좋을지 고민이 될 것이다.      
-`@Qualifier`의 단점은 주입 받을 때 다음과 같이 모든 코드에 `@Qualifier` 를 붙여주어야 한다는 점이다.     
+`@Primary`가 붙었던 빈은 우선순위를 가지게 되는 것이기에 일반적인 주입 방법과 같이 사용할 수 있다.    
       
-```java  
-@Autowired    
-public OrderServiceImpl(MemberRepository memberRepository, @Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy) {
-    this.memberRepository = memberRepository;
-    this.discountPolicy = discountPolicy;
-}
-```        
-반면에, `@Primary` 를 사용하면 이렇게 `@Qualifier` 를 붙일 필요가 없다.         
-클린코드에서 말하길 주석이 많아지면 유지보수 관리하기가 힘들어진다고 말한다.       
-필자 생각으로 `@Qualifier`또한, 같은 이름을 맞춰주고 사용해야하니 관리하기 어려울 것이라 생각든다.     
-그렇기에 필자 추천으로는 **@Primary 를 사용하는 것을 추천한다**       	    
-	       
-**`@Primary`, `@Qualifier` 활용**       
-코드에서 자주 사용하는 **메인 데이터베이스의 커넥션을 획득하는 스프링 빈**이 있고,        
-코드에서 특별한 기능으로 **가끔 사용하는 서브 데이터베이스의 커넥션을 획득하는 스프링 빈**이 있다고 생각해보자.      
-**메인 데이터베이스의 커넥션**을 획득하는 스프링 빈은         
-**@Primary 를 적용**해서 조회하는 곳에서 `@Qualifier` 지정 없이 편리하게 조회하고,      
-**서브 데이터베이스 커넥션 빈**을 획득할 때는       
-**@Qualifier**를 지정해서 명시적으로 획득 하는 방식으로 사용하면 코드를 깔끔하게 유지할 수 있다.      
-물론 이때 메인 데이터베이스의 스프링 빈을 등록할 때 `@Qualifier` 를 지정해주는 것은 상관없다.
+## 📖 @Primary VS @Qualifier
+`@Primary` 와 `@Qualifier` 중에 어떤 것을 사용하면 좋을지 고민이 될 것이다.      
+      
+**추천 사용**
+* `@Qualifier`는 모든 코드에 `@Qualifier` 를 붙여주어야 한다. 
+* `@Primary`는 연관된 빈들에서 단 한번만 선언하면된다.            
+* 결국, `@Qualifier` 이름을 맞춰주고 여러곳에 선언해야하니 관리하기 어렵다.        
+* **그렇기에 @Primary 를 사용하는 것을 추천한다**       	    
+* 물론, 2개를 혼합해서 사용해도 된다.  	         
        
 **우선순위**      
-`@Primary` 는 기본값 처럼 동작하는 것이고,     
-`@Qualifier` 는 매우 상세하게 동작한다.         
-이런 경우 어떤 것이 우선권을 가져갈까?      
-스프링은 자동보다는 수동이, 넒은 범위의 선택권 보다는 좁은 범위의 선택권이 우선 순위가 높다.    
-따라서 어노테이션이 2개가 함께 사용된다면 **@Qualifier** 가 우선권이 높다.     
+* `@Primary`와 `@Qualifier` 2개가 함께 사용된다면 **@Qualifier** 가 우선권이 높다.     
 
 # 어노테이션 직접 만들기       
 `@Qualifier("mainDiscountPolicy")` 의 문제점이 무엇인지 보이는가?    
@@ -337,6 +276,7 @@ public class OrderServiceImpl implements OrderService {
 단적으로 `@Autowired`도 재정의 할 수 있다.       
 물론 스프링이 제공하는 기능을 뚜렷한 목적 없이 무분별하게 재정의하는 것은      
 유지보수에 더 혼란만 가중할 수 있으므로 사용 전 충분히 검토후 사용하길 바란다.   
+
 
 # 조회한 빈이 모두 필요할 때, List, Map  
 지금까지는 여러개의 빈이 있을 때 단 한개만을 조회하는 방법에 대해서 배웠다.        
