Update 02 의존관계 주입2.md

--- a/01 IoC 컨테이너/02 의존관계 주입2.md
+++ b/01 IoC 컨테이너/02 의존관계 주입2.md
@@ -192,4 +192,29 @@ public class SampleService {
              
 이 점을 잘 이용한다면, `Map`에서 각각의 객체를 바로 꺼내 코드의 변경없이 다양한 전략을 구현시킬 수 있다.        
 
+# Autowired 동작 원리
+```java
+package org.springframework.beans.factory.config;
+
+import org.springframework.beans.BeansException;
+import org.springframework.lang.Nullable;
+
+public interface BeanPostProcessor {
+
+	@Nullable
+	default Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException {
+		return bean;
+	}
+
+	@Nullable
+	default Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
+		return bean;
+	}
+
+}
+
+```
+
+# 참고 
+[💾 Knowledge Repository](https://atoz-develop.tistory.com/entry/Spring-Autowired-%EB%8F%99%EC%9E%91-%EC%9B%90%EB%A6%AC-BeanPostProcessor)
 
