Update 02 의존관계 주입2.md

--- a/01 IoC 컨테이너/02 의존관계 주입2.md
+++ b/01 IoC 컨테이너/02 의존관계 주입2.md
@@ -193,6 +193,12 @@ public class SampleService {
 이 점을 잘 이용한다면, `Map`에서 각각의 객체를 바로 꺼내 코드의 변경없이 다양한 전략을 구현시킬 수 있다.        
 
 # Autowired 동작 원리
+`@Autowired` 어노테이션은 `BeanPostProcessor`라는 라이프 사이클 인터페이스의 구현체인    
+`AutowiredAnnotationBeanPostProcessor`에 의해 의존성 주입이 이루어진다.  
+   
+**그러니까 어떻게? 🤔**   
+ 
+
 ```java
 package org.springframework.beans.factory.config;
 
