Update 02 의존관계 주입2.md

--- a/01 IoC 컨테이너/02 의존관계 주입2.md
+++ b/01 IoC 컨테이너/02 의존관계 주입2.md
@@ -191,11 +191,32 @@ public class SampleService {
 ```
              
 이 점을 잘 이용한다면, `Map`에서 각각의 객체를 바로 꺼내 코드의 변경없이 다양한 전략을 구현시킬 수 있다.        
-
-# Autowired 동작 원리
+  
+# 📓 Autowired 동작 원리  
 `@Autowired` 어노테이션은 `BeanPostProcessor`라는 라이프 사이클 인터페이스의 구현체인    
 `AutowiredAnnotationBeanPostProcessor`에 의해 의존성 주입이 이루어진다.  
-   
+       
+## 📖 BeanPostProcessor     
+`BeanPostProcessor`는 빈과 관련된 라이프 사이클 인터페이스의 구현체이다.        
+
+* 빈(Bean)의 설정을 후처리(postprocessing)함으로써 빈의 생명 주기와 빈 팩토리의 생명주기에 관여한다.(별도의 라이프사이클 제공)     
+* `빈이 초기화 되기 전` `빈이 초기화 된 후`에 대한 2개의 메서드를 제공.   
+    ```java
+	@Nullable
+	default Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException {
+		return bean;
+	}
+
+	@Nullable
+	default Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
+		return bean;
+	}
+    ```
+* 빈 프로퍼티의 유효성 검사 등에 사용된다. -> 이건 좀 조사해볼 필요가 있네요        
+* 다른 초기화 메소드인 `afterPropertiesSet()`과 `init-method`가 호출되기 직전과 직후에 호출되어진다.   
+    
+
+  
 **그러니까 어떻게? 🤔**   
  
 
@@ -207,15 +228,6 @@ import org.springframework.lang.Nullable;
 
 public interface BeanPostProcessor {
 
-	@Nullable
-	default Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException {
-		return bean;
-	}
-
-	@Nullable
-	default Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
-		return bean;
-	}
 
 }
 
