Update 02 의존관계 주입2.md

--- a/01 IoC 컨테이너/02 의존관계 주입2.md
+++ b/01 IoC 컨테이너/02 의존관계 주입2.md
@@ -212,27 +212,11 @@ public class SampleService {
 		return bean;
 	}
     ```
-* 빈 프로퍼티의 유효성 검사 등에 사용된다. -> 이건 좀 조사해볼 필요가 있네요        
-* 다른 초기화 메소드인 `afterPropertiesSet()`과 `init-method`가 호출되기 직전과 직후에 호출되어진다.   
-    
-
-  
-**그러니까 어떻게? 🤔**   
- 
-
-```java
-package org.springframework.beans.factory.config;
-
-import org.springframework.beans.BeansException;
-import org.springframework.lang.Nullable;
-
-public interface BeanPostProcessor {
-
-
-}
-
-```
+* 빈 프로퍼티의 유효성 검사 등에 사용된다. -> 이건 좀 조사해볼 필요가 있네요          
+* 다른 초기화 메소드인 `afterPropertiesSet()`과 `init-method`가 호출되기 직전과 직후에 호출되어진다.      
+* 즉, `다른 라이프 사이클 인터페이스의 메서드`가 호출되기 전/후 동작을 처리하는 `별개의 라이프 사이클 인터페이스`이다.        
+   
 
 # 참고 
-[💾 Knowledge Repository](https://atoz-develop.tistory.com/entry/Spring-Autowired-%EB%8F%99%EC%9E%91-%EC%9B%90%EB%A6%AC-BeanPostProcessor)
-
+[💾 Knowledge Repository](https://atoz-develop.tistory.com/entry/Spring-Autowired-%EB%8F%99%EC%9E%91-%EC%9B%90%EB%A6%AC-BeanPostProcessor)   
+[이러쿵저러쿵](https://ooz.co.kr/217)   
