Update 02 의존관계 주입2.md

--- a/01 IoC 컨테이너/02 의존관계 주입2.md
+++ b/01 IoC 컨테이너/02 의존관계 주입2.md
@@ -195,10 +195,19 @@ public class SampleService {
 # 📓 Autowired 동작 원리  
 `@Autowired` 어노테이션은 `BeanPostProcessor`라는 라이프 사이클 인터페이스의 구현체인    
 `AutowiredAnnotationBeanPostProcessor`에 의해 의존성 주입이 이루어진다.  
-       
+
 ## 📖 BeanPostProcessor     
 `BeanPostProcessor`는 빈과 관련된 라이프 사이클 인터페이스의 구현체이다.        
-
+   
+**스프링 빈의 이벤트 라이프사이클**  
+1. 스프링 컨테이너 생성
+2. 스프링 빈 생성 : **BeanPostProcessor는 전/후로 실행된다.**      
+3. 의존관계 주입   
+4. 초기화 콜백  
+5. 사용  
+6. 소멸 전 콜백  
+7. 스프링 종료    
+  
 * 빈(Bean)의 설정을 후처리(postprocessing)함으로써 빈의 생명 주기와 빈 팩토리의 생명주기에 관여한다.(별도의 라이프사이클 제공)     
 * `빈이 초기화 되기 전` `빈이 초기화 된 후`에 대한 2개의 메서드를 제공.   
     ```java
@@ -212,11 +221,10 @@ public class SampleService {
 		return bean;
 	}
     ```
-* 빈 프로퍼티의 유효성 검사 등에 사용된다. -> 이건 좀 조사해볼 필요가 있네요          
-* 다른 초기화 메소드인 `afterPropertiesSet()`과 `init-method`가 호출되기 직전과 직후에 호출되어진다.      
-* 즉, `다른 라이프 사이클 인터페이스의 메서드`가 호출되기 전/후 동작을 처리하는 `별개의 라이프 사이클 인터페이스`이다.        
-   
-
+* 빈 프로퍼티의 유효성 검사 등에 사용된다. -> 이건 좀 조사해볼 필요가 있네요            
+* 다른 초기화 메소드인 `afterPropertiesSet()`과 `init-method`가 호출되기 직전과 직후에 호출되어진다.        
+* 즉, `다른 라이프 사이클 인터페이스의 메서드`가 호출되기 전/후 동작을 처리하는 `별개의 라이프 사이클 인터페이스`이다.          
+     
 # 참고 
 [💾 Knowledge Repository](https://atoz-develop.tistory.com/entry/Spring-Autowired-%EB%8F%99%EC%9E%91-%EC%9B%90%EB%A6%AC-BeanPostProcessor)   
 [이러쿵저러쿵](https://ooz.co.kr/217)   
