Update 02 의존관계 주입2.md

--- a/01 IoC 컨테이너/02 의존관계 주입2.md
+++ b/01 IoC 컨테이너/02 의존관계 주입2.md
@@ -196,6 +196,13 @@ public class SampleService {
 `@Autowired` 어노테이션은 `BeanPostProcessor`라는 라이프 사이클 인터페이스의 구현체인    
 `AutowiredAnnotationBeanPostProcessor`에 의해 의존성 주입이 이루어진다.  
 
+`BeanPostProcessor`의 구현체인 `AutowiredAnnotationBeanPostProcessor`가  
+빈의 초기화 라이프 사이클 이전(빈이 생성되기 전)에 `@Autowired`가 붙어있으면 해당하는 빈을 찾아서 주입해주는 작업을 한다.     
+   
+`BeanFactory(ApplicationContext)`는 `AutowiredAnnotationBeanPostProcessor`를 꺼내    
+@Autowired로 의존성 주입이 필요한 빈들에게 @Autowired를 처리하는 로직을 적용한다.     
+(이 부분은 이해가 잘 되지 않네요 다시 봐야겠습니다.)     
+   
 ## 📖 BeanPostProcessor     
 `BeanPostProcessor`는 빈과 관련된 라이프 사이클 인터페이스의 구현체이다.        
    
